--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0"
   },
-  "scripts":{
+  "scripts": {
     "start": "nodemon index.js"
   }
 }
