--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "https://emittr-backend-mypi.onrender.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
